<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Music Explorer</string>
    <string name="set_root_folder">Set Root Folder</string>
    <string name="action_settings">Settings</string>
    <string name="action_play">Play</string>
    <string name="action_exit">Exit</string>
    <string name="root_folder_label">Root Folder:</string>
    <string name="specify_settings">Specify the player\'s settings</string>
    <string name="no_files"></string>
    <string name="artist">Artist</string>
    <string name="player_view_folder">Folder:</string>
    <string name="player_view_artist">Artist</string>
    <string name="currently_playing">Currently playing</string>
    <string name="auto_display_columns_label">Select the number of columns to display on the car screen</string>
    <string name="auto_display_folder_icons">Should the folder items display using folder icons on the car screen?"</string>
    <string name="auto_display_folder_icons_more">Otherwise, just the labels are displayed which may be easier to read"</string>
    <string name="settings_set_root_warning">Please click Browse to select the root folder in your music files.</string>
    <string name="resume_play_label">Resume playback when started?</string>
    <string name="bluetooth_connected">Bluetooth has connected</string>
    <string name="bluetooth_disconnected">Bluetooth has disconnected</string>
    <string name="empty_folder">This folder does not have any tracks or child folders</string>
    <string name="starting_on_phone">MusicExplorer is starting up on your phone, it will be ready soon.</string>
    <string name="setting_up_on_phone">Please reference your phone and complete the setup of MusicExplorer there.</string>
    <string name="track_error">There was an error playing this track. It may not be a valid media file.</string>
</resources>