<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:id="@+id/settings_main">

    <TextView
        android:id="@+id/version_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:text="VersionInfo"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/build_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="12sp"
        android:text="build date"
        android:layout_below="@id/version_info"/>
<!--
    <TextView
        android:id="@+id/settings_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:text="@string/specify_settings"
        android:textSize="24sp"
        android:textStyle="bold"
        android:layout_marginTop="0px"
        android:layout_below="@id/build_date" />
-->
    <LinearLayout
        android:id="@+id/root_folder_group"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32sp"
        android:weightSum="4"
        android:layout_below="@id/version_info">

        <TextView
            android:id="@+id/root_folder_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:text="@string/root_folder_label"
            android:textAlignment="textEnd"
            android:textSize="18sp"
            android:layout_below="@id/build_date"/>

        <TextView
            android:id="@+id/root_folder"
            android:layout_width="0px"
            android:layout_height="wrap_content"
            android:layout_weight="4"
            android:layout_alignBottom="@+id/root_folder_label"
            android:layout_toRightOf="@+id/root_folder_label"
            android:textAlignment="center"
            android:textSize="18sp" />

        <Button
            android:id="@+id/root_folder_get"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Browse"
            android:layout_weight="0"
            android:layout_alignBaseline="@+id/root_folder"
            android:layout_toRightOf="@+id/root_folder"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/auto_display_columns_group"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="18sp"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:layout_below="@id/root_folder_group">

        <TextView
            android:id="@+id/auto_display_columns_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:textSize="18sp"
            android:layout_below="@id/root_folder_group"
            android:text="@string/auto_display_columns_label"/>

            <LinearLayout
                android:id="@+id/auto_column_display_spinner_spinners"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="-8sp">

                <TextView
                    android:id="@+id/auto_display_columns_value_plus"
                    android:layout_width="32sp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="9sp"
                    android:layout_marginRight="12sp"
                    android:textAlignment="viewEnd"
                    android:background="@android:color/transparent"
                    android:textSize="24sp"
                    android:textStyle="bold"
                    android:text="+" />

                <TextView
                    android:id="@+id/auto_display_columns_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="9sp"
                    android:textAlignment="center"
                    android:textSize="24sp"
                    android:text="0"
                    android:layout_marginLeft="0px"/>

                <TextView
                    android:id="@+id/auto_display_columns_value_minus"
                    android:layout_width="32sp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="9sp"
                    android:layout_marginLeft="12sp"
                    android:textAlignment="viewStart"
                    android:background="@android:color/transparent"
                    android:textSize="32sp"
                    android:textStyle="bold"
                    android:text="-" />

            </LinearLayout>

    </LinearLayout>

    <LinearLayout
            android:id="@+id/auto_display_folder_icons_group"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:weightSum="4"
            android:layout_marginTop="18sp"
            android:layout_below="@id/auto_display_columns_group"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/auto_display_folder_icons"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:textSize="18sp"
                android:text="@string/auto_display_folder_icons"/>

            <Switch
                android:id="@+id/auto_display_folder_icons_switch"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_toRightOf="@id/auto_display_folder_icons"/>

        </LinearLayout>

        <TextView
            android:id="@+id/auto_display_folder_icons_more"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            android:text="@string/auto_display_folder_icons_more"
            android:layout_below="@id/auto_display_folder_icons_group" />

    <LinearLayout
        android:id="@+id/resume_play"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:weightSum="4"
        android:layout_marginTop="18sp"
        android:layout_below="@id/auto_display_folder_icons_more"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/resume_play_label"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:textSize="18sp"
            android:text="@string/resume_play_label"
            android:layout_below="@id/auto_display_columns_value" />

        <Switch
            android:id="@+id/resume_play_switch"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_toRightOf="@id/resume_play_label"/>

    </LinearLayout>

    <RelativeLayout
        android:id="@+id/InnerRelativeLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true" >

        <TextView
            android:id="@+id/settings_set_root_warning"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="24sp"
            android:textStyle="bold"
            android:text="@string/settings_set_root_warning"/>

    </RelativeLayout>

</RelativeLayout>